# ChangeLog for sys-apps/baselayout
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.473 2009/10/11 04:44:07 vapier Exp $

*baselayout-2.1.7 (16 Aug 2010)

  16 Aug 2010; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.7.ebuild:
  New baselayout that enables UTF-8 by default (but preserves standard
  LC_COLLATE order so default 'ls' output is less weird.)

*baselayout-2.1.6 (29 Aug 2009)

  29 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.6.ebuild:
  New baselayout that installs a new /sbin/realdev script that generates
  initial set of device nodes.

*baselayout-2.1.5 (19 Aug 2009)

  19 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.5.ebuild:
  Added missing "cd" command to pkg_postinst(), necessary for proper device
  node creation.

*baselayout-2.1.4 (13 Aug 2009)

  13 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.4.ebuild:
  Use a more aggressive device node creation logic to help ensure all base
  device nodes are OK. This is being done as a precaution against files being
  created in /dev that aren't device nodes.

*baselayout-2.1.3 (08 Aug 2009)

  08 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.3.ebuild:
  rewrite of more parts of the ebuild to make it easier to maintain. Various
  minor improvements over 2.1.2. One fix should allow this ebuild to merge
  correctly during stage builds for multilib systems.

*baselayout-2.1.2 (08 Aug 2009)

  08 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.2.ebuild:
  Added some more initial device nodes, made chmod run all the time on device
  nodes and changed perms on /dev/null to 777 (was wrong before.)

*baselayout-2.1.1 (01 Aug 2009)

  01 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.1.ebuild:
  Add .conf suffixes to modprobe.d files. Add logic to move old files to new