@@ -1,8 +1,10 @@
 AUX MAKEDEV 51166 RMD160 8a2b3d9007223612f7f9c57968b575b63161c662 SHA1 731deffb2f31770a3ac70ff65b5a94e2366bc794 SHA256 41e3e4612d8640082fb80fee4789a589f60a3259878a5730b529b340e0ad513d
 DIST baselayout-2.1.1.tar.bz2 22689 RMD160 c4d9bea5066a4a987c49dfe3970056ca0109cdef SHA1 7f5292f7d56999fd774c29c8c326a9001feda42c SHA256 6e356d921ad16cc86801c1fe6a542484bdc9a1b4dd1a347fbcbc9ee909a0442a
 DIST baselayout-2.1.7.tar.bz2 22527 RMD160 524cfc89338f62a526bfd685cffee453b438df6f SHA1 97955bf0add9e3d70358f3fd4cde5a345abf90fc SHA256 aa271c2e350ebe936479313c9b8b4ba5b1173e1663259b81bf9c65530e36fdbf
+DIST baselayout-2.1.8.tar.bz2 22782 RMD160 ef12eeb7d2310dc11127af024ddf52df7fa0e3c1 SHA1 b6393ebd77ffd4ec7c9f4c94b10f46420e9f6ef7 SHA256 4a5c68cc8b190fd2fbf2c9cfc058dc9790c10fce7a3904ba0cc4fd756f6e3e53
 DIST realdev-1.0.tar.bz2 2171 RMD160 ec5555528054967fa36cf46e59ab83e2da5dd7b7 SHA1 f2abdee150d2a2374ff779868cbed1de23403968 SHA256 2173eff1afc883e6e42f51087bd0d6a3035faaaa3c93a4f8f5ddcc49f8b8aaa3
 EBUILD baselayout-2.1.6.ebuild 7306 RMD160 532b57b0261a7288617b95ba39526b7237505091 SHA1 0946ebcf02899661f31fd998625ac6beedb69467 SHA256 d9238478d9d53956a507e7f8395d133137221687bfc59286521fd439fbb7d37f
 EBUILD baselayout-2.1.7.ebuild 7317 RMD160 18b99e50ea453050d0add4f52a1a71f66bac6d76 SHA1 714970e3a067d532c485135acff6adc0c0942dab SHA256 a34dc535dd0f929d1d66717d423ff8874c908b2ecac692cbaccf2070820ef3f0
-MISC ChangeLog 106431 RMD160 85128914f29c4685e6343cff01201014e6a68dbd SHA1 c17c7193cf175d054c0225282ebf05529438cedd SHA256 4cc24e89787129e5e373caf205a8610abd146ade91b3cfd7d715b2e09cff5b00
+EBUILD baselayout-2.1.8.ebuild 7316 RMD160 50fe9d53918566e6f9906fd6326397f12018cd08 SHA1 a35b6d796cc0588899e92a1c1242a6511d5a23a7 SHA256 c12a957a09590ca5e9c8ebe5803683dfe9fd80a3f119383b8aa52b0bacc5d284
+MISC ChangeLog 106573 RMD160 e6fc0d77c33b7ddccc428af40a0b3db38e8ee7a1 SHA1 657991d7b5f134570f72e9b1d5626b73c12aad11 SHA256 86ed854b02b4d376901aec7b565b3d343a144e9caf0f526702afcbbfb9c60618
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
